force-app/main/default/objects/Email_Audit_Log__c/Email_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Email Audit Log</label>
    <nameField>
        <label>Email Audit Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>