force-app/main/default/objects/Email_Audit_Log__c/fields/Body_Preview__c.field-meta.xml
<CustomField>
    <fullName>Body_Preview__c</fullName>
    <description>First few characters of the email body.</description>
    <inlineHelpText>First few characters of the email body.</inlineHelpText>
    <label>Body Preview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>