force-app/main/default/objects/Email_Audit_Log__c/fields/Email_Action__c.field-meta.xml
<CustomField>
    <fullName>Email_Action__c</fullName>
    <label>Email Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Saved_as_PDF</fullName>
                <label>Saved as PDF</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>