force-app/main/default/objects/Email_Audit_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API or label of the related object.</description>
    <inlineHelpText>API or label of the related object,</inlineHelpText>
    <label>Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>