force-app/main/default/objects/Email_Audit_Log__c/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <description>Stores the To/CC email addresses.</description>
    <inlineHelpText>Stores the To/CC email addresses.</inlineHelpText>
    <label>Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>