force-app/main/default/objects/Email_Audit_Log__c/fields/Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Email_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>