force-app/main/default/objects/Email_Audit_Log__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject line of the sent email.</description>
    <inlineHelpText>Subject line of the sent email.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>